Import Adafruit GFX and LED-Backpack libraries
https://github.com/adafruit/Adafruit-GFX-Library
at commit 334e815bc1dd3f93f93c45b77b4f33bdc9bfc8c5

https://github.com/adafruit/Adafruit-LED-Backpack-Library
at commit 897ac2979aca60643fcb2fb010a1eaee33624de7

--- a/teensy3/Makefile
+++ b/teensy3/Makefile
@@ -84,8 +84,8 @@ SIZE = $(COMPILERPATH)/arm-none-eabi-size
 
 # automatically create lists of the sources and objects
 # TODO: this does not handle Arduino libraries yet...
-C_FILES := $(wildcard *.c)
-CPP_FILES := $(wildcard *.cpp) ../main.cpp
+C_FILES := $(wildcard *.c) $(wildcard ../adafruit/*.c)
+CPP_FILES := $(wildcard *.cpp) $(wildcard ../adafruit/*.cpp) ../main.cpp
 OBJS := $(C_FILES:.c=.o) $(CPP_FILES:.cpp=.o)
 
 
