--- a/teensy3/Makefile
+++ b/teensy3/Makefile
@@ -73,7 +73,7 @@ CFLAGS =
 LDFLAGS = -Os -Wl,--gc-sections,--defsym=__rtc_localtime=0 --specs=nano.specs -mcpu=cortex-m4 -mthumb -T$(MCU_LD)
 
 # additional libraries to link
-LIBS = -lm ../target/thumbv7em-none-eabi/release/libclock.a
+LIBS = -lm -Wl,--start-group -lnosys -lc -lgcc -Wl,--end-group
 
 
 # names for the compiler programs
@@ -88,13 +88,15 @@ C_FILES := $(wildcard *.c) $(wildcard ../adafruit/*.c)
 CPP_FILES := $(wildcard *.cpp) $(wildcard ../adafruit/*.cpp) ../main.cpp
 OBJS := $(C_FILES:.c=.o) $(CPP_FILES:.cpp=.o)
 
+RUST_LIB = ../target/thumbv7em-none-eabi/release/libclock.a
+
 
 # the actual makefile rules (all .o files built by GNU make's default implicit rules)
 
 all: $(TARGET).hex
 
-$(TARGET).elf: $(OBJS) $(MCU_LD)
-	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
+$(TARGET).elf: $(OBJS) $(MCU_LD) $(RUST_LIB) Makefile
+	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(RUST_LIB) $(LIBS)
 
 %.hex: %.elf
 #	$(SIZE) $<
