RTC get in Rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Simon Sapin <simon.sapin@exyr.org>"]
 
 [lib]
 crate-type = ["staticlib"]
+
+[dependencies]
+gregor = { path = "../gregor" }
