--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "clock"
 version = "0.1.0"
 authors = ["Simon Sapin <simon.sapin@exyr.org>"]
 
-[lib]
-crate-type = ["staticlib"]
-
 [dependencies]
 gregor = "0.3"
+teensy3 = { path = "teensy3-rs" }
