It runs! With the Makefile instead of gcc crate

--- a/teensy3/Makefile
+++ b/teensy3/Makefile
@@ -77,6 +77,7 @@ LIBS = -lm -Wl,--start-group -lnosys -lc -lgcc -Wl,--end-group
 
 
 # names for the compiler programs
+AR = $(COMPILERPATH)/arm-none-eabi-ar
 CC = $(COMPILERPATH)/arm-none-eabi-gcc
 CXX = $(COMPILERPATH)/arm-none-eabi-g++
 OBJCOPY = $(COMPILERPATH)/arm-none-eabi-objcopy
@@ -88,15 +89,16 @@ C_FILES := $(wildcard *.c)
 CPP_FILES := $(wildcard *.cpp)
 OBJS := $(C_FILES:.c=.o) $(CPP_FILES:.cpp=.o)
 
-RUST_LIB = ../target/thumbv7em-none-eabi/release/libclock.a
-
 
 # the actual makefile rules (all .o files built by GNU make's default implicit rules)
 
 all: $(TARGET).hex
 
-$(TARGET).elf: $(OBJS) $(MCU_LD) $(RUST_LIB) Makefile
-	@$(CC) $(LDFLAGS) -o $@ $(OBJS) $(RUST_LIB) $(LIBS)
+libteensy3.a: $(OBJS) Makefile
+	@$(AR) crus $@ $(OBJS)
+
+$(TARGET).elf: $(OBJS) $(MCU_LD) Makefile
+	@$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
 
 %.hex: %.elf
 #	$(SIZE) $<
